--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="lock.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <script src="backend.js">
     </script>
     <title>Password Generator</title>
@@ -51,6 +52,8 @@
 
     <footer>
         © 2025 Mark Chaitra. All rights reserved.
+        <a href="https://ca.linkedin.com/in/mark-chaitra-694703293" target="_blank"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/MarkChaitra" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
     </footer>
 </body>
 </html>
